# squeal

./: stack.yaml
squeal-postgresql/src/Squeal/PostgreSQL/: Binary.hs  Definition.hs  PQ.hs  Schema.hs
squeal-postgresql/src/Squeal/PostgreSQL/Expression/: Parameter.hs  Range.hs  Subquery.hs  Type.hs
squeal-postgresql/test/: Property.hs  Spec.hs
squeal-postgresql/test/Specs/: ExceptionHandling.hs
squeal-skeleton/: squeal-skeleton.cabal
squeal-skeleton/src/Squeal/Skeleton/: API.hs  Server.hs
squeal-skeleton/src/Squeal/Skeleton/Database/: Queries.hs  Schema.hs
squeal-skeleton/src/Squeal/Skeleton/Database/Schema/: V1.hs  V2.hs
