name: squeal-skeleton
version: 0.1.0.0
synopsis: Squeal Skeleton
description: Squeal Skeleton
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD3
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2019 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.Skeleton.API
    Squeal.Skeleton.Database.Schema
    Squeal.Skeleton.Database.Schema.V1
    Squeal.Skeleton.Database.Schema.V2
    Squeal.Skeleton.Database.Queries
    Squeal.Skeleton.Server
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , squeal-postgresql

executable squeal-skeleton-server
  default-language: Haskell2010
  hs-source-dirs: exe
  ghc-options: -Wall
  main-is: squeal-skeleton-server.hs
  build-depends:
      base
    , squeal-postgresql
    , squeal-skeleton

executable squeal-skeleton-migrate
  default-language: Haskell2010
  hs-source-dirs: exe
  ghc-options: -Wall
  main-is: squeal-skeleton-migrate.hs
  build-depends:
      base
    , squeal-postgresql
    , squeal-skeleton
